--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,8 @@ services:
         WORKDIR: app
     environment:
       - POSTGRES_PASSWORD=$POSTGRES_PASSWORD
+      - API_DOMAIN="localhost:$FRONT_PORT"
+    command: /bin/sh -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
     volumes:
       - "./api:/app"
     ports:
@@ -33,7 +35,7 @@ services:
       context: ./frontend
       args:
         WORKDIR: app
-    command: npm start
+        API_URL: "http://localhost:$API_PORT"
     volumes:
       - "./frontend:/app"
     ports:
