--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,7 @@ services:
     image: postgres:15.1-alpine
     environment:
       - TZ=UTC
-      - POSTGRES_DB=postgres
-      - POSTGRES_USER=postgres
+      - POSTGRES_USER=$POSTGRES_USER
       - POSTGRES_PASSWORD=$POSTGRES_PASSWORD
       - POSTGRES_HOST_AUTH_METHOD=trust
     ports:
@@ -20,8 +19,8 @@ services:
       args:
         WORKDIR: app
     environment:
+      - POSTGRES_USER=$POSTGRES_USER
       - POSTGRES_PASSWORD=$POSTGRES_PASSWORD
-      - API_DOMAIN="localhost:$FRONT_PORT"
     command: /bin/sh -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
     volumes:
       - "./api:/app"
@@ -32,12 +31,13 @@ services:
   
   front:
     build:
-      context: ./frontend
+      context: ./front
       args:
         WORKDIR: app
-        API_URL: "http://localhost:$API_PORT"
+        REACT_APP_API_URL: "http://localhost:$API_PORT"
+    command: /bin/sh -c "npm start"
     volumes:
-      - "./frontend:/app"
+      - "./front:/app"
     ports:
       - "$FRONT_PORT:3000"
     depends_on:
