--- a/front/package.json
+++ b/front/package.json
@@ -39,5 +39,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "axios": "^1.1.3",
+    "axios-case-converter": "^0.11.1"
   }
 }
