--- a/front/package.json
+++ b/front/package.json
@@ -10,6 +10,8 @@
     "@types/node": "^16.18.3",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.9",
+    "axios": "^1.1.3",
+    "axios-case-converter": "^0.11.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
@@ -20,7 +22,11 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "run-p lint:*",
+    "lint:eslint": "eslint --ext .jsx,.js,.tsx,.ts ./src",
+    "lint:prettier": "prettier --write './src/**/*.{jsx,js,tsx,ts}'",
+    "eslint:fix": "eslint --fix --ext .jsx,.js,.tsx,.ts ./src"
   },
   "eslintConfig": {
     "extends": [
@@ -41,7 +47,18 @@
     ]
   },
   "devDependencies": {
-    "axios": "^1.1.3",
-    "axios-case-converter": "^0.11.1"
+    "@typescript-eslint/eslint-plugin": "^5.43.0",
+    "@typescript-eslint/parser": "^5.43.0",
+    "eslint": "^8.28.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-plugin-react": "^7.31.11",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-unused-imports": "^2.0.0",
+    "npm-run-all": "^4.1.5",
+    "prettier": "^2.7.1"
   }
 }
