--- a/front/.circleci/config.yml
+++ b/front/.circleci/config.yml
@@ -41,4 +41,7 @@ jobs:
 workflows:
   build_test:
     jobs:
-      - test_front
+      - test_front:
+          filters:
+            branches:
+              ignore: main
