--- a/front/.circleci/config.yml
+++ b/front/.circleci/config.yml
@@ -11,32 +11,26 @@ jobs:
 
     steps:
       - checkout
-      - run: git submodule sync
-      - run: git submodule update --init
-
       - restore_cache:
           keys:
-            - v1-dependencies-{{ checksum "front/package.json" }}
+            - v1-dependencies-{{ checksum "package.json" }}
 
       - run:
           name: install-packages
           command: npm install
-          working_directory: front
       
       - save_cache:
-          key: v1-dependencies-{{ checksum "front/package.json" }}
+          key: v1-dependencies-{{ checksum "package.json" }}
           paths:
-            - front/node_modules
+            - ./node_modules
       
       - run:
           name: lint
           command: npm run lint:eslint
-          working_directory: front
 
       - run:
           name: test
           command: npm run test
-          working_directory: front
 
 workflows:
   build_test:
