--- a/front/.circleci/config.yml
+++ b/front/.circleci/config.yml
@@ -1,41 +1,75 @@
 version: 2.1
 
-jobs:
-  test_front:
+orbs:
+  aws-s3: circleci/aws-s3@3.0.0
+
+executors:
+  test_image:
     docker:
       - image: cimg/node:18.12.1
         environment:
           NODE_ENV: test
-    
-    working_directory: ~/repo
+  production_image:
+    docker:
+      - image: cimg/node:18.12.1
+      - image: cimg/python:3.6
+        environment:
+          NODE_ENV: production
 
+commands:
+  npm_install:
     steps:
-      - checkout
       - restore_cache:
           keys:
             - v1-dependencies-{{ checksum "package.json" }}
-
       - run:
           name: install-packages
           command: npm install
-      
       - save_cache:
           key: v1-dependencies-{{ checksum "package.json" }}
           paths:
-            - ./node_modules
-      
+            - node_modules
+
+jobs:
+  build_and_test:
+    executor: test_image
+    working_directory: ~/repo
+    steps:
+      - checkout
+      - npm_install
       - run:
           name: lint
           command: npm run lint:eslint
-
       - run:
           name: test
           command: npm run test
+  
+  build_and_deploy:
+    executor: production_image
+    working_directory: ~/repo
+    steps:
+      - checkout
+      - npm_install
+      - run:
+          name: build
+          command: npm run build
+      - aws-s3/sync:
+          from: build
+          to: s3://tasting-note-staging
 
 workflows:
-  build_test:
+  test:
     jobs:
-      - test_front:
+      - build_and_test:
           filters:
             branches:
               ignore: main
+  test_and_deploy:
+    jobs:
+      - build_and_test:
+          filters:
+            branches:
+              only: main
+      - build_and_deploy:
+          requires:
+            - build_and_test
