API側で開発環境と本番環境でDockerfileを別にした

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,7 @@ services:
   api:
     build:
       context: ./api
+      dockerfile: Dockerfile
       args:
         WORKDIR: app
     environment:
