--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,11 +5,11 @@ services:
     image: postgres:15.1-alpine
     environment:
       - TZ=UTC
-      - POSTGRES_USER=$POSTGRES_USER
-      - POSTGRES_PASSWORD=$POSTGRES_PASSWORD
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
       - POSTGRES_HOST_AUTH_METHOD=trust
     ports:
-      - 3306:3306
+      - "3306:3306"
     volumes:
       - "./api/tmp/db:/var/lib/postgresql/data"
 
@@ -19,14 +19,11 @@ services:
       dockerfile: Dockerfile
       args:
         WORKDIR: app
-    environment:
-      - POSTGRES_USER=$POSTGRES_USER
-      - POSTGRES_PASSWORD=$POSTGRES_PASSWORD
     command: /bin/sh -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
     volumes:
       - "./api:/app"
     ports:
-      - "$API_PORT:3000"
+      - "8000:3000"
     depends_on:
       - db
   
@@ -35,11 +32,11 @@ services:
       context: ./front
       args:
         WORKDIR: app
-        REACT_APP_API_URL: "http://localhost:$API_PORT"
+        REACT_APP_API_URL: "http://localhost:8000"
     command: /bin/sh -c "npm start"
     volumes:
       - "./front:/app"
     ports:
-      - "$FRONT_PORT:3000"
+      - "3001:3000"
     depends_on:
       - api
