--- a/front/Dockerfile
+++ b/front/Dockerfile
@@ -4,8 +4,7 @@ ARG WORKDIR
 ARG REACT_APP_API_URL
 
 ENV LANG=C.UTF-8 \
-    TZ=Azia/Tokyo \
-    REACT_APP_API_URL=${REACT_APP_API_URL}
+    TZ=Azia/Tokyo
 
 WORKDIR ${WORKDIR}
 
